--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,24 +11,23 @@
          android:id="@+id/textView1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
-android:text="Content provider"
-android:layout_alignParentTop="true"
-android:layout_centerHorizontal="true"
-android:textSize="30dp" />
+             android:text="Content provider"
+         android:layout_alignParentTop="true"
+         android:layout_centerHorizontal="true"
+         android:textSize="30dp" />
 
-<TextView
-android:id="@+id/textView2"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:text="Tutorials point "
-android:textColor="#ff87ff09"
-android:textSize="30dp"
-android:layout_below="@+id/textView1"
-android:layout_centerHorizontal="true" />
+        <TextView android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tutorials point "
+            android:textColor="#ff87ff09"
+            android:textSize="30dp"
+            android:layout_below="@+id/textView1"
+            android:layout_centerHorizontal="true" />
 
-<ImageButton
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
+            <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 android:id="@+id/imageButton"
 android:src="@mipmap/ic_launcher"
 android:layout_below="@+id/textView2"
